pod.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: web
  name: salim-pod-2
  labels:
    app: salim-web-2
    
spec:
  containers:
    - name: nginx
      image: nginx
      imagePullPolicy: IfNotPresent
      ports:
        - name: web
          containerPort: 80
          protocol: TCP
