ser.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
 type: NodePort
 ports:
  - targetPort: 80
    port: 80
    nodePort: 30001 
 selector:
  run: nginx
  app: myap
