servic-cluster.yml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service-cluster
  namespace: web
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 80
