deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: salim-web
    namespace: web
spec:
    replicas: 1
    selector:
        matchLabels:
            app: salim-web
    template:
        metadata:
            labels:
                app: salim-web
        spec:
            containers:
              - name: nginx
                image: nginx
                imagePullPolicy: IfNotPresent
                ports:
                 - name: web
                   containerPort: 80
                   protocol: TCP
                volumeMounts:
                  - mountPath: /usr/share/nginx/html/saleem/
                    name: my-html
            volumes:
              - configMap:
                  name: my-html-code
                name: my-html
---

apiVersion: v1
kind: Service
metadata:
 name: salim-web-serv-2
 namespace: web
spec:
 ports:
   - targetPort: 80
     port: 5001
 selector:
    app: salim-web-2


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ingress 
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx-example
  rules:
  - host: "demo.salimonline.local"
    http:
      paths:
      - pathType: Prefix
        path: "/saleem"
        backend:
          service:
            name: salim-web-serv-2
            port:
              number: 5001
      - path: "/salim"
        pathType: Prefix
        backend:
          service:
            name: nginx-2-cl
            port:
              number: 5002


---

apiVersion: apps/v1
kind: Deployment
metadata:
    name: salim-web-2
    namespace: web
spec:
    replicas: 1
    selector:
        matchLabels:
            app: salim-web-2
    template:
        metadata:
            labels:
                app: salim-web-2
        spec:
            containers:
              - name: nginx
                image: nginx
                imagePullPolicy: IfNotPresent
                ports:
                 - name: web
                   containerPort: 80
                   protocol: TCP
                volumeMounts:
                  - mountPath: /usr/share/nginx/html/salim/
                    name: my-html-2
            volumes:
              - configMap:
                  name: my-config-2
                name: my-html-2
