ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ingress 
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  host: demo.salimonline.local
  - http:
      paths:
      - path: /saleem
        pathType: Prefix
        backend:
          service:
            name: alim-web-serv-2
            port:
              number: 5001
