ser.yml
apiVersion: v1
kind: Service
metadata:
 name: salim-web-serv-2
 namespace: web
spec:
 ports:
   - targetPort: 80
     port: 5001
 selector:
    app: salim-web-2
    

---
apiVersion: v1
kind: Pod
metadata:
  namespace: web
  name: salim-pod-2
  labels:
    app: salim-web-2
spec:
  containers:
    - name: nginx
      image: nginx
      imagePullPolicy: IfNotPresent
      ports:
        - name: web
          containerPort: 80
          protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ingress 
  namespace: web
spec:
  ingressClassName: nginx
  rules:
  - host: demo.salimonline.local
    http:
      paths:
      - path: /saleem/(.*)
        pathType: Prefix
        backend:
          service:
            name: salim-web-serv-2
            port:
              number: 5001
